config/gateway/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    name: traefik-system
